swen430as1/tests/invalid/foreach/ForEach_Invalid_05.while
int f(bool[] items) {
    int x = 0;
    for(int item : items) {
	x = x + item;
    }
    return item;
}
